modified:   pom.xml         modified:   src/main/java/com/cinema/Main.java         modified:   src/main/java/com/cinema/controllers/HomeController.java         new file:   src/main/java/com/cinema/models/Home.java         new file:   src/main/resources/img/1280726_cannes-2018-poster-landscape-Mquette-Flore-MaquinGeorges-Pierre.jpg         new file:   src/main/resources/img/55616266-grande-bande-de-film-pour-textures-et-fond-d-/303/251cran.jpg         new file:   src/main/resources/img/Badboysforlife_official_Blackwomenmag.png         modified:   src/main/resources/img/Thumbs.db         renamed:    src/main/resources/img/Sonic-Movie-Poster-Speed-2-1280x720.jpg -> src/main/resources/img/sonic.jpg         new file:   src/main/resources/views/Confirmation_Reservation.fxml         new file:   src/main/resources/views/Forumulaire.fxml         modified:   src/main/resources/views/Home.fxml         new file:   src/main/resources/views/Login.fxml         new file:   src/main/resources/views/Mes_Reservations.fxml         new file:   src/main/resources/views/Paiement.fxml         new file:   src/main/resources/views/Payement.fxml