@@ -3,7 +3,17 @@
   <groupId>com.cinema</groupId>
   <artifactId>tpnote</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-      <dependencies>
+  <dependencies>
+  	<dependency>
+    	<groupId>org.webjars</groupId>
+    	<artifactId>font-awesome</artifactId>
+    	<version>5.13.0</version>
+	</dependency>
+	<dependency>
+    	<groupId>com.jfoenix</groupId>
+    	<artifactId>jfoenix</artifactId>
+    	<version>9.0.8</version>
+	</dependency>
   	<dependency>
   		<groupId>mysql</groupId>
     	<artifactId>mysql-connector-java</artifactId>
@@ -39,8 +49,7 @@
             <artifactId>maven-compiler-plugin</artifactId>
             <version>3.8.0</version>
             <configuration>
-          		<source>1.8</source>
-          		<target>1.8</target>
+          		<release>11</release>
         	</configuration>
         </plugin>
   		<plugin>
@@ -51,6 +60,29 @@
         		<mainClass>com.cinema.Main</mainClass>
     		</configuration>
 		</plugin>
+		<plugin>
+		    <groupId>org.openjfx</groupId>
+		    <artifactId>javafx-maven-plugin</artifactId>
+		    <version>0.0.1</version>
+		    <configuration>
+		        <options>
+			        <option>--add-opens</option>
+			        <option>javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix</option>
+			        <option>--add-opens</option>
+			        <option>javafx.controls/com.sun.javafx.scene.control=com.jfoenix</option>
+			        <option>--add-exports</option>
+			        <option>javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix</option>
+			        <option>--add-exports</option>
+			        <option>javafx.controls/com.sun.javafx.scene.control=com.jfoenix</option>
+			        <option>--add-exports</option>
+			        <option>javafx.base/com.sun.javafx.binding=com.jfoenix</option>
+			        <option>--add-exports</option>
+			        <option>javafx.graphics/com.sun.javafx.stage=com.jfoenix</option>
+			        <option>--add-exports</option>
+			        <option>javafx.base/com.sun.javafx.event=com.jfoenix</option>
+		        </options>
+		    </configuration>
+		</plugin>	
 		<plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
